# heavytails

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  Makefile  README.md  ROADMAP.md  SECURITY.md  cli.py  mkdocs.yml  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: auto-upgrade-pyproject.yml  benchmarks.yml  ci.yml  enforce-branch-flow.yml
benchmarks/: __init__.py  performance_tests.py
data/: README.md
docs/: DOCUMENTATION_OVERVIEW.md  gen_ref_pages.py  index.md
docs/about/: authors.md  citation.md  license.md
docs/development/: contributing.md  testing.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: distributions.md  fitting.md  pdf-cdf.md  sampling.md  tail-estimation.md
docs/javascripts/: katex.js
docs/reference/: discrete.md  extra_distributions.md  heavy_tails.md  plotting.md  tail_index.md  utilities.md
docs/stylesheets/: extra.css
docs/theory/: heavy-tails.md
examples/: finance_application.py
heavytails/: __init__.py  __main__.py  cli.py  discrete.py  extensions.py  extra_distributions.py  heavy_tails.py  performance.py  plotting.py  roadmap.py  tail_index.py  utilities.py  validation.py
scripts/: demo_advanced_features.py  generate_sample_data.py  pyproject_updater.py
tests/: test_comprehensive.py  test_copulas.py  test_discrete.py  test_extra_distributions.py  test_generalized_pareto.py  test_heavy_tails.py  test_log_normal.py  test_pareto.py  test_performance.py  test_plotting.py  test_roadmap.py  test_tail_index.py  test_utilities.py  test_validation.py
