[tool.poetry]
name = "heavytails"
version = "0.1.0"
description = "Pure-Python heavy-tailed probability distributions for research, teaching, and simulation."
authors = ["Diogo Ribeiro <dfr@esmad.ipp.pt>"]
maintainers = ["Diogo Ribeiro <dfr@esmad.ipp.pt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/diogoribeiro7/heavytails"
repository = "https://github.com/diogoribeiro7/heavytails"
documentation = "https://diogoribeiro7.github.io/heavytails"
keywords = [
    "heavy-tailed", 
    "statistics", 
    "probability", 
    "extreme-values", 
    "distributions",
    "finance",
    "risk-management",
    "tail-risk",
    "extreme-value-theory"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Statistics",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed"
]
packages = [{ include = "heavytails" }]
include = [
    "CITATION.cff",
    "CHANGELOG.md",
    "docs/**/*",
    "tests/**/*",
    "examples/**/*"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/diogoribeiro7/heavytails/issues"
"Discussions" = "https://github.com/diogoribeiro7/heavytails/discussions"
"Changelog" = "https://github.com/diogoribeiro7/heavytails/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.5.0"
pytest-benchmark = "^4.0.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.112.1"

# Linting and formatting
ruff = "^0.6.9"
mypy = "^1.11.2"
pre-commit = "^4.0.1"
isort = "^5.13.2"

# Security
bandit = "^1.7.10"
safety = "^3.2.11"

# Type stubs
types-PyYAML = "^6.0.12"
types-requests = "^2.32.0"

# Development utilities
ipython = "^8.29.0"
rich = "^14.2.0"
typer = "^0.20.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = { version = ">=0.30.1,<1.0", extras = ["python"] }
mkdocs-jupyter = "^0.25.1"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"
mkdocs-gallery = "^0.10.3"

[tool.poetry.group.examples.dependencies]
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pandas = "^2.2.3"
jupyter = "^1.1.1"
plotly = "^6.3.1"

[tool.poetry.group.benchmarks.dependencies]
scipy = "^1.14.1"
numpy = "^2.1.3"
memory-profiler = "^0.61.0"
line-profiler = "^4.1.3"

[tool.poetry.scripts]
heavytails = "heavytails.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "NPY", # numpy specific
    "PD",  # pandas-vet
    "PERF", # perflint
    "RUF", # ruff specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "TRY003",  # avoid specifying long messages outside exception class
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts allowed in tests
    "ARG",     # unused function arguments in tests
    "FBT",     # don't care about booleans as positional arguments in tests
    "PLR2004", # magic values are OK in tests
    "S311",    # pseudo-random generators are OK in tests
]
"__init__.py" = ["F401"]  # unused imports OK in __init__.py

[tool.ruff.isort]
known-first-party = ["heavytails"]
force-sort-within-sections = true

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--durations=10"
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "property: marks property-based tests",
    "benchmark: marks benchmark tests",
]

[tool.coverage.run]
source = ["heavytails"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "heavytails/__main__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "TYPE_CHECKING",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["heavytails"]
